--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ body {
 <div class="resume">
    <div class="resume_left">
      <div class="resume_profile">
-       <img src="/assets/img/weitz.jpg" alt="profile_pic">
+       <img src="./assets/img/weitz.jpg" alt="profile_pic">
      </div>
      <div class="resume_content">
        <div class="resume_item resume_info">
